# feros

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  railway.json
integrations/: Cargo.toml  integrations.yaml  pyproject.toml
integrations/src/: encryption.rs  lib.rs  python.rs  registry.rs  secret_resolver.rs  secret_store.rs  token_refresh.rs  vault.rs
integrations/tests/: vault_integration.rs
studio/api/: .env.example  Dockerfile  alembic.ini  integrations.pyi  pyproject.toml  pyrefly.toml  voice_engine.pyi
studio/api/app/: main.py
studio/api/app/agent_builder/: __init__.py  context.py  deps.py  edit_ops.py  graph.py  service.py
studio/api/app/agent_builder/tools/: __init__.py  artifacts.py  connections.py  skills.py  web_search.py
studio/api/app/api/: agents.py  builder.py  calls.py  credentials.py  evaluations.py  integrations.py  oauth.py  oauth_apps.py  phone_numbers.py  recordings.py  settings.py  voice_session.py
studio/api/app/lib/: __init__.py  auth.py  config.py  config_utils.py  credential_utils.py  database.py  file_store.py  integration_registry.py  kv_store.py  llm_factory.py  oauth_apps.py  tool_activity.py
studio/api/app/models/: __init__.py  agent.py  call.py  call_event.py  conversation.py  credential.py  evaluation.py  oauth_app.py  phone_number.py  provider.py
studio/api/app/schemas/: __init__.py  agent.py  agent_pb2.py  agent_pb2.pyi  call.py  conversation.py  credential.py  evaluation.py  phone_number.py  provider.py
studio/api/app/services/: agent_import.py
studio/api/app/services/evaluations/: __init__.py  config_service.py  contracts.py  judging.py  profiles.py  recorder.py  rubrics.py  run_service.py  sandbox.py  state_machine.py  worker.py
studio/api/migrations/: env.py
studio/api/migrations/versions/: 008afd96d8c3_add_credentials_table_and_metadata_json_.py  23bcafb9f857_add_agent_artifacts_table.py  2496c33e06d1_merge_heads.py  6f112f6d467c_rename_model_messages_json_to_persisted_.py  a1b2c3d4e5f6_add_token_expires_at_to_credentials.py  a9f3c1d2e5b7_add_provider_call_id_to_calls.py  b1c2d3e4f5a6_add_provider_credentials_to_phone_numbers.py  b74d66a2f9f1_add_evaluation_tables.py  b7d9f3a1c2e4_drop_knowledge_tables.py  c4e5f6a7b8d9_add_connect_encryption_and_oauth_states.py  c9d8e7f6a5b4_nullable_credential_agent_id_default_connections.py  d4745d541def_rename_phone_number_url_columns.py  d4e5f6a7b8c9_add_phone_numbers_table.py  e2f4a6b8c0d1_add_call_events_table.py  e8b1e2a0664f_add_model_messages_json_to_builder_.py  f61f165b24ec_add_oauth_apps_table.py
studio/api/scripts/: dump_env_schema.py
studio/api/skills/airtable/: SKILL.md
studio/api/skills/brevo/: SKILL.md
studio/api/skills/cal_com/: SKILL.md
studio/api/skills/calendly/: SKILL.md
studio/api/skills/clickup/: SKILL.md
studio/api/skills/custom_webhook/: SKILL.md
studio/api/skills/discord/: SKILL.md
studio/api/skills/gohighlevel/: SKILL.md
studio/api/skills/google_calendar/: SKILL.md
studio/api/skills/google_docs/: SKILL.md
studio/api/skills/google_sheets/: SKILL.md
studio/api/skills/hubspot/: SKILL.md
studio/api/skills/jotform/: SKILL.md
studio/api/skills/lemlist/: SKILL.md
studio/api/skills/microsoft_outlook/: SKILL.md
studio/api/skills/pagerduty/: SKILL.md
studio/api/skills/sendgrid/: SKILL.md
studio/api/skills/slack/: SKILL.md
studio/api/skills/typeform/: SKILL.md
studio/api/tests/: test_agent_graph.py  test_agent_import.py  test_artifact_tools.py  test_ask_user.py  test_builder_context.py  test_builder_correction.py  test_builder_service.py  test_edit_ops.py  test_evaluation_config_service.py  test_evaluation_contracts.py  test_evaluation_judging.py  test_evaluation_llm_judge.py  test_evaluation_rubrics.py  test_evaluation_run_service.py  test_evaluation_sandbox.py  test_evaluation_state_machine.py  test_evaluation_worker.py  test_file_store.py  test_integrations.py  test_oauth_flow.py  test_placeholder.py  test_provider_config_resolution.py  test_tool_activity.py  test_voice_rust_bindings.py  test_voice_session.py
voice/engine/: Cargo.toml  pyproject.toml
voice/engine/crates/agent-kit/: Cargo.toml
voice/engine/crates/agent-kit/src/: artifact_store.rs  context_summarizer.rs  lib.rs  micro_tasks.rs  quickjs_engine.rs  swarm.rs  tool_executor.rs
voice/engine/crates/common/: Cargo.toml
voice/engine/crates/common/src/: lib.rs  recording.rs
voice/engine/crates/proto/: Cargo.toml  build.rs
voice/engine/crates/proto/src/: lib.rs
voice/engine/crates/soxr/: Cargo.toml  build.rs
voice/engine/crates/soxr/src/: lib.rs
voice/engine/crates/transport/: Cargo.toml
voice/engine/crates/transport/src/: error.rs  lib.rs  websocket.rs
voice/engine/crates/voice-trace/: Cargo.toml
voice/engine/crates/voice-trace/src/: bus.rs  event.rs  lib.rs  recording.rs  sink_event.rs  tracer.rs  turn_tracker.rs
voice/engine/src/: language_config.rs  lib.rs  main.rs  native_session.rs  python.rs  server.rs  session.rs  settings.rs  types.rs  utils.rs
voice/engine/src/audio_ml/: mod.rs  smart_turn.rs  vad.rs
voice/engine/src/audio_ml/denoiser/: dfn3.rs  dtln.rs  mod.rs  rnnoise.rs
voice/engine/src/providers/: llm.rs  mod.rs  ws.rs
voice/engine/src/providers/stt/: builtin.rs  cartesia.rs  deepgram.rs  elevenlabs.rs  groq.rs  mod.rs  openai_realtime.rs  openai_whisper.rs
voice/engine/src/providers/tts/: builtin.rs  cartesia.rs  cartesia_ws.rs  deepgram.rs  deepgram_ws.rs  elevenlabs.rs  elevenlabs_ws.rs  groq.rs  mod.rs  (+1 more)
voice/engine/src/reactor/: audio.rs  mod.rs  replay.rs  session.rs  timers.rs  turn_phase.rs
voice/engine/tests/: audio_utils_tests.rs  denoiser_dsp.rs  interruption_policy_tests.rs  observability_tests.rs  quickjs_validation.rs  session_and_types_tests.rs  smart_turn_mel.rs  tool_filler_tests.rs  trace_tests.rs  vad_state_machine.rs
voice/server/: .env.example  Cargo.toml  Dockerfile
voice/server/src/: config.rs  cred.rs  db.rs  main.rs  observability.rs  recording.rs  secrets.rs  sessions.rs  telephony.rs  utils.rs  vault_client.rs
(+147 files in other folders)
