[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "integrations"
version = "0.1.0"
description = "Integrations — credential encryption, secret resolution, provider registry"
requires-python = ">=3.10"

[tool.maturin]
features = ["extension-module"]
module-name = "integrations"
