[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "voice-engine"
version = "0.1.0"
description = "Voice Engine — Rust-powered voice pipeline with Python bindings"
requires-python = ">=3.12"

[tool.maturin]
features = ["pyo3", "webrtc", "telephony", "opus"]
module-name = "voice_engine"
profile = "dev-release"
