[package]
name = "voice-transport"
version = "0.1.0"
edition = "2021"
description = "Transport abstraction layer for voice-rust — WebSocket, WebRTC, and future telephony."

[dependencies]
# Core (always)
tokio = { version = "1", features = ["sync", "macros", "time"] }
bytes = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

# WebSocket (always — baseline transport)
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"

# Event bus (for forwarding events to transport clients)
voice-trace = { path = "../voice-trace" }

# WebRTC (optional — behind feature flag)
str0m = { version = "0.16.2", optional = true }
opus = { version = "0.3", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }

# Telephony (optional — behind feature flag)
base64 = { version = "0.22", optional = true }
audio-codec-algorithms = { version = "0.7.0", optional = true }

[features]
default = []
webrtc = ["str0m", "opus", "uuid", "reqwest"]
telephony = ["base64", "reqwest", "dep:audio-codec-algorithms"]

[dev-dependencies]
envy = "0.4.2"
