[package]
name = "voice-trace"
version = "0.1.0"
edition = "2021"
description = "Unified event bus — trace, metrics, and structured events for the voice engine"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }

# Binary data (audio chunks)
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Shared types (RecordingConfig, AudioLayout, AudioFormat)
common = { path = "../common" }

# Timestamps (recording transcript)
chrono = { version = "0.4", features = ["clock"] }

# OpenTelemetry (optional — voice pipeline events → OTLP backend)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest-rustls"], optional = true }

audiopus = { version = "0.3.0-rc.0", optional = true }
ogg = { version = "0.9", optional = true }

# --- DB Sink (Optional) ---
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

base64 = { version = "0.22", optional = true }
futures-util = { version = "0.3", optional = true }
soxr = { version = "0.1.0", path = "../soxr" }

# S3 upload (optional — feature-gated, adds ~15 MB to binary)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }

[features]
default = []
opus = ["dep:audiopus", "dep:ogg"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
pg = ["dep:sqlx", "dep:uuid"]
langfuse = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:base64",
  "dep:futures-util",
]
# S3 recording upload — feature-gated to keep the default binary lean.
# Enable in voice-server by adding s3 = ["voice-trace/s3"] to its features.
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
